Update logo links to index.html

--- a/rise-risers.html
+++ b/rise-risers.html
@@ -169,7 +169,7 @@
 <div class="cursor-ring" id="cursorRing"></div>
 
 <nav>
-  <a href="rise-landing.html" class="nav-logo"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 180 48" fill="none" height="36" style="display:block;vertical-align:middle">
+  <a href="index.html" class="nav-logo"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 180 48" fill="none" height="36" style="display:block;vertical-align:middle">
   <!-- R -->
   <path d="M4 44 L4 4 L28 4 C36 4 42 9.5 42 18 C42 23.5 39 27.5 34 29.5 L43 44 L32 44 L24.5 31 L15 31 L15 44 Z M15 13 L15 22 L26.5 22 C29.5 22 31.5 20.5 31.5 17.5 C31.5 14.5 29.5 13 26.5 13 Z" fill="currentColor"/>
   <!-- accent arrow on R -->
