Add Privacy Policy and Terms of Service pages

--- a/rise-risers.html
+++ b/rise-risers.html
@@ -93,6 +93,7 @@
   .footer-logo { font-family: 'Bebas Neue', sans-serif; font-size: 18px; letter-spacing: 0.2em; }
   .footer-slogan { font-family: 'DM Mono', monospace; font-size: 10px; letter-spacing: 0.2em; text-transform: uppercase; color: var(--muted); }
   .footer-copy { font-family: 'DM Mono', monospace; font-size: 10px; color: var(--muted); }
+  .footer-copy a { color: var(--muted); text-decoration: none; border-bottom: 1px solid var(--border); margin: 0 6px; padding-bottom: 2px; }
 
   @keyframes fadeUp { from { opacity: 0; transform: translateY(24px); } to { opacity: 1; transform: translateY(0); } }
 
