--- a/rise-form.html
+++ b/rise-form.html
@@ -457,4 +457,16 @@ document.querySelectorAll('.chip').forEach(chip => {
 // Enter key nav
 document.querySelectorAll('.field-input').forEach(input => {
   input.addEventListener('keydown', e => {
-    if (e.key === 'Enter' && input.tagName !== 'TEXTAREA
+    if (e.key === 'Enter' && input.tagName !== 'TEXTAREA') showStep(currentStep + 1);
+  });
+});
+</script>
+
+<footer>
+  <div class="footer-logo"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 180 48" fill="none" height="28" style="display:block"><path d="M4 44 L4 4 L28 4 C36 4 42 9.5 42 18 C42 23.5 39 27.5 34 29.5 L43 44 L32 44 L24.5 31 L15 31 L15 44 Z M15 13 L15 22 L26.5 22 C29.5 22 31.5 20.5 31.5 17.5 C31.5 14.5 29.5 13 26.5 13 Z" fill="currentColor"/><path d="M27 39 L35 30 L30.5 30" stroke="#5a9e00" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" fill="none"/><rect x="48" y="4" width="10" height="40" fill="currentColor"/><path d="M65 34.5 C65 39.5 69 45 78 45 C87 45 91.5 39.5 91.5 33.5 C91.5 27.5 87.5 24.5 80.5 22.5 C74.5 20.8 72.5 19 72.5 16.5 C72.5 14 74.5 12 78 12 C81.5 12 83.5 14 83.5 16.5 L91.5 16.5 C91.5 10 87 3 78 3 C69 3 65 8.5 65 15.5 C65 21.5 68.5 24.5 76 26.5 C82 28.2 84 30 84 33.5 C84 37 81.5 39 78 39 C74.5 39 72.5 37 72.5 34.5 Z" fill="currentColor"/><path d="M98 4 L98 44 L124 44 L124 35 L109 35 L109 28 L122 28 L122 20 L109 20 L109 13 L124 13 L124 4 Z" fill="currentColor"/><rect x="130" y="33" width="11" height="11" rx="1.5" fill="currentColor"/></svg></div>
+  <div class="footer-slogan">We are rising</div>
+  <div class="footer-copy">© 2025 RISE Collective • <a href="privacy-policy.html" style="color: rgba(17,17,16,0.68); text-decoration: none; margin: 0 6px; border-bottom: 1px solid rgba(17,17,16,0.14); padding-bottom: 2px;">Privacy</a> • <a href="terms-of-service.html" style="color: rgba(17,17,16,0.68); text-decoration: none; margin: 0 6px; border-bottom: 1px solid rgba(17,17,16,0.14); padding-bottom: 2px;">Terms</a></div>
+</footer>
+
+</body>
+</html>
