Add SEO infrastructure: robots.txt, sitemap.xml, 404.html, and comprehensive meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>RISE — We Are Rising</title>
+<meta name="description" content="RISE Collective: AI-native builder collective. Strategy, product build, and venture design for impact-driven companies.">
+<meta name="keywords" content="AI, venture, builders, consulting, product design, strategy">
+<meta name="author" content="RISE Collective">
+<meta property="og:title" content="RISE — We Are Rising">
+<meta property="og:description" content="A collective of operators, designers, engineers, and strategists building alongside visionary founders.">
+<meta property="og:url" content="https://digiroiio-lgtm.github.io/wealwaysrise/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://digiroiio-lgtm.github.io/wealwaysrise/og-image.jpg">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="RISE — We Are Rising">
+<meta name="twitter:description" content="A collective of operators, designers, engineers, and strategists building alongside visionary founders.">
+<meta name="twitter:image" content="https://digiroiio-lgtm.github.io/wealwaysrise/og-image.jpg">
+<link rel="canonical" href="https://digiroiio-lgtm.github.io/wealwaysrise/">
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:ital,wght@0,300;0,400;0,500;1,300&family=DM+Mono:wght@400;500&display=swap" rel="stylesheet">
