--- a/rise-form.html
+++ b/rise-form.html
@@ -3,7 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Let's Build — RISE</title>
+<title>Let's Build — RISE Collective</title>
+<meta name="description" content="Ready to build? Let's partner with RISE Collective to bring your vision to life with AI-native strategy and execution.">
+<meta name="keywords" content="contact, inquiry, partnership, venture">
+<meta property="og:title" content="Let's Build — RISE Collective">
+<meta property="og:description" content="Ready to build? Let's partner with RISE to bring your vision to life.">
+<meta property="og:url" content="https://digiroiio-lgtm.github.io/wealwaysrise/rise-form.html">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://digiroiio-lgtm.github.io/wealwaysrise/og-image.jpg">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Let's Build — RISE Collective">
+<meta name="twitter:description" content="Ready to build? Let's partner with RISE to bring your vision to life.">
+<meta name="twitter:image" content="https://digiroiio-lgtm.github.io/wealwaysrise/og-image.jpg">
+<link rel="canonical" href="https://digiroiio-lgtm.github.io/wealwaysrise/rise-form.html">
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:ital,wght@0,300;0,400;0,500;1,300&family=DM+Mono:wght@400;500&display=swap" rel="stylesheet">
