--- a/rise-risers.html
+++ b/rise-risers.html
@@ -4,6 +4,19 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>The Risers — RISE Collective</title>
+<meta name="description" content="Meet the RISE Collective: operators, designers, engineers, and strategists dedicated to building impact-driven ventures.">
+<meta name="keywords" content="team, people, builders, operators, collective">
+<meta property="og:title" content="The Risers — RISE Collective">
+<meta property="og:description" content="Meet the collective of operators, designers, engineers, and strategists building at RISE.">
+<meta property="og:url" content="https://digiroiio-lgtm.github.io/wealwaysrise/rise-risers.html">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://digiroiio-lgtm.github.io/wealwaysrise/og-image.jpg">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="The Risers — RISE Collective">
+<meta name="twitter:description" content="Meet the collective of builders at RISE.">
+<meta name="twitter:image" content="https://digiroiio-lgtm.github.io/wealwaysrise/og-image.jpg">
+<link rel="canonical" href="https://digiroiio-lgtm.github.io/wealwaysrise/rise-risers.html">
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:ital,wght@0,300;0,400;0,500;1,300&family=DM+Mono:wght@400;500&display=swap" rel="stylesheet">
