--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,6 +4,12 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Privacy Policy — RISE Collective</title>
+<meta name="description" content="Privacy Policy for RISE Collective. Learn how we collect, use, and protect your personal information.">
+<meta property="og:title" content="Privacy Policy — RISE Collective">
+<meta property="og:url" content="https://digiroiio-lgtm.github.io/wealwaysrise/privacy-policy.html">
+<meta property="og:type" content="website">
+<link rel="canonical" href="https://digiroiio-lgtm.github.io/wealwaysrise/privacy-policy.html">
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:ital,wght@0,300;0,400;0,500;1,300&family=DM+Mono:wght@400;500&display=swap" rel="stylesheet">
