--- a/rise-works.html
+++ b/rise-works.html
@@ -4,6 +4,19 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Rising Works — RISE Collective</title>
+<meta name="description" content="Explore our portfolio of AI-native ventures, product builds, and strategic implementations across multiple industries.">
+<meta name="keywords" content="portfolio, case studies, AI, venture, product">
+<meta property="og:title" content="Rising Works — RISE Collective">
+<meta property="og:description" content="Explore our portfolio of AI-native ventures, product builds, and strategic implementations.">
+<meta property="og:url" content="https://digiroiio-lgtm.github.io/wealwaysrise/rise-works.html">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://digiroiio-lgtm.github.io/wealwaysrise/og-image.jpg">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Rising Works — RISE Collective">
+<meta name="twitter:description" content="Explore our portfolio of AI-native ventures and strategic implementations.">
+<meta name="twitter:image" content="https://digiroiio-lgtm.github.io/wealwaysrise/og-image.jpg">
+<link rel="canonical" href="https://digiroiio-lgtm.github.io/wealwaysrise/rise-works.html">
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:ital,wght@0,300;0,400;0,500;1,300&family=DM+Mono:wght@400;500&display=swap" rel="stylesheet">
