--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
   .nav-links a.active { color: var(--accent); }
   .nav-cta { font-family: 'DM Mono', monospace; font-size: 11px; letter-spacing: 0.1em; text-transform: uppercase; background: transparent; border: 1px solid var(--border); color: var(--white); padding: 10px 22px; cursor: none; text-decoration: none; transition: border-color 0.2s, background 0.2s, color 0.2s; }
   .nav-cta:hover { background: var(--accent); border-color: var(--accent); color: var(--black); }
+  .theme-toggle { font-size: 18px; background: none; border: 1px solid var(--border); padding: 8px 12px; cursor: pointer; border-radius: 4px; transition: border-color 0.2s, background 0.2s; margin-right: 16px; }
+  .theme-toggle:hover { border-color: var(--accent); background: rgba(90,158,0,0.1); }
+  html.light-mode { --black: #111110; --white: #f7f5f0; --muted: rgba(247,245,240,0.72); --border: rgba(247,245,240,0.14); }
+  html.light-mode body { background: var(--black); color: var(--white); }
+  html.light-mode nav { background: rgba(17,17,16,0.96); border-bottom: 1px solid var(--border); }
+  html.light-mode .theme-toggle { border-color: rgba(247,245,240,0.14); }
   .hero { min-height: 100vh; display: grid; grid-template-rows: 1fr auto; padding: 0 48px; position: relative; overflow: hidden; }
   .hero-noise { position: absolute; inset: 0; background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.03'/%3E%3C/svg%3E"); pointer-events: none; opacity: 0.6; }
   .hero-grid-line { position: absolute; top: 0; bottom: 0; width: 1px; background: var(--border); pointer-events: none; }
