--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -145,7 +145,7 @@
       <li><strong>Opt-Out:</strong> The right to opt out of marketing communications</li>
       <li><strong>Data Portability:</strong> The right to receive your data in a portable format</li>
     </ul>
-    <p>To exercise these rights, please contact us at <strong>hello@risecolletive.com</strong>.</p>
+    <p>To exercise these rights, please contact us at <strong>hello@wealwaysrise.com</strong>.</p>
   </div>
 
   <div class="section">
@@ -163,7 +163,7 @@
     <p>If you have questions about this Privacy Policy or our privacy practices, please contact us at:</p>
     <p>
       <strong>RISE Collective</strong><br>
-      Email: <strong>hello@risecollective.com</strong><br>
+      Email: <strong>hello@wealwaysrise.com</strong><br>
       Location: Istanbul, Turkey
     </p>
   </div>
