--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -163,7 +163,7 @@
     <p>For questions about these Terms of Service, please contact:</p>
     <p>
       <strong>RISE Collective</strong><br>
-      Email: <strong>hello@risecollective.com</strong><br>
+      Email: <strong>hello@wealwaysrise.com</strong><br>
       Location: Istanbul, Turkey
     </p>
   </div>
