--- a/index.html
+++ b/index.html
@@ -385,193 +385,11 @@
   <div class="hero-main">
     <div class="hero-eyebrow">Builder Collective · AI-Native</div>
     <div class="hero-headline" style="opacity:0;animation:fadeUp 0.9s 0.35s forwards;">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 265" width="100%" style="display:block;overflow:visible">
-        <defs>
-          <clipPath id="clipC1"><text x="10" y="230" font-family="'Arial Black',Impact,sans-serif" font-size="230" font-weight="900" letter-spacing="-4">C</text></clipPath>
-          <clipPath id="clipO"><text x="148" y="230" font-family="'Arial Black',Impact,sans-serif" font-size="230" font-weight="900" letter-spacing="-4">O</text></clipPath>
-          <clipPath id="clipC2"><text x="430" y="230" font-family="'Arial Black',Impact,sans-serif" font-size="230" font-weight="900" letter-spacing="-4">C</text></clipPath>
-          <clipPath id="clipR"><text x="572" y="230" font-family="'Arial Black',Impact,sans-serif" font-size="230" font-weight="900" letter-spacing="-4">R</text></clipPath>
-          <clipPath id="clipE1"><text x="720" y="230" font-family="'Arial Black',Impact,sans-serif" font-size="230" font-weight="900" letter-spacing="-4">E</text></clipPath>
-          <clipPath id="clipA"><text x="856" y="230" font-family="'Arial Black',Impact,sans-serif" font-size="230" font-weight="900" letter-spacing="-4">A</text></clipPath>
-          <clipPath id="clipT"><text x="992" y="230" font-family="'Arial Black',Impact,sans-serif" font-size="230" font-weight="900" letter-spacing="-4">T</text></clipPath>
-          <clipPath id="clipE2"><text x="1098" y="230" font-family="'Arial Black',Impact,sans-serif" font-size="230" font-weight="900" letter-spacing="-4">E</text></clipPath>
-          <style>
-            .ltr { fill: rgba(17,17,16,0.06); font-family:'Arial Black',Impact,sans-serif; font-size:230px; font-weight:900; letter-spacing:-4px; }
-            .lo1 { fill:none; stroke:rgba(17,17,16,0.2); stroke-width:2.5; font-family:'Arial Black',Impact,sans-serif; font-size:230px; font-weight:900; letter-spacing:-4px; }
-            .gl  { stroke:rgba(90,158,0,0.3); stroke-width:0.8; }
-            .sl  { stroke:rgba(17,17,16,0.28); stroke-width:1; }
-            .al  { stroke:#5a9e00; stroke-width:1.3; fill:none; }
-            .dn  { fill:#5a9e00; }
-            .dd  { fill:rgba(17,17,16,0.28); }
-            .ct  { font-family:'DM Mono',monospace; font-size:8px; fill:rgba(90,158,0,0.75); }
-            .dt  { font-family:'DM Mono',monospace; font-size:7px; fill:rgba(17,17,16,0.32); }
-            @keyframes p1{0%,100%{opacity:1}50%{opacity:0.25}} @keyframes p2{0%,100%{opacity:1}50%{opacity:0.25}} @keyframes p3{0%,100%{opacity:1}50%{opacity:0.25}}
-            .p1{animation:p1 3s ease-in-out infinite} .p2{animation:p1 2.2s ease-in-out infinite .4s} .p3{animation:p1 2.8s ease-in-out infinite .8s}
-          </style>
-        </defs>
-        <!-- filled letter bases -->
-        <text x="10"   y="230" class="ltr">C</text>
-        <text x="148"  y="230" class="ltr">O</text>
-        <text x="308"  y="230" class="ltr">-</text>
-        <text x="430"  y="230" class="ltr">C</text>
-        <text x="572"  y="230" class="ltr">R</text>
-        <text x="720"  y="230" class="ltr">E</text>
-        <text x="856"  y="230" class="ltr">A</text>
-        <text x="992"  y="230" class="ltr">T</text>
-        <text x="1098" y="230" class="ltr">E</text>
-
-        <!-- C1 — SKYSCRAPER -->
-        <g clip-path="url(#clipC1)">
-          <line x1="42" y1="235" x2="42" y2="18" class="sl"/><line x1="82" y1="235" x2="82" y2="18" class="sl"/><line x1="120" y1="235" x2="120" y2="18" class="sl"/>
-          <line x1="18" y1="58"  x2="132" y2="58"  class="sl" stroke-dasharray="4 2"/><line x1="18" y1="88"  x2="132" y2="88"  class="sl" stroke-dasharray="4 2"/>
-          <line x1="18" y1="118" x2="132" y2="118" class="sl" stroke-dasharray="4 2"/><line x1="18" y1="148" x2="132" y2="148" class="sl" stroke-dasharray="4 2"/>
-          <line x1="18" y1="178" x2="132" y2="178" class="sl" stroke-dasharray="4 2"/><line x1="18" y1="208" x2="132" y2="208" class="sl" stroke-dasharray="4 2"/>
-          <rect x="50" y="65"  width="14" height="10" fill="rgba(90,158,0,0.45)" class="p1"/><rect x="50" y="95"  width="14" height="10" fill="rgba(90,158,0,0.22)"/>
-          <rect x="50" y="125" width="14" height="10" fill="rgba(90,158,0,0.45)" class="p2"/><rect x="50" y="155" width="14" height="10" fill="rgba(90,158,0,0.22)"/>
-          <rect x="50" y="185" width="14" height="10" fill="rgba(90,158,0,0.35)" class="p3"/>
-          <rect x="90" y="65"  width="14" height="10" fill="rgba(90,158,0,0.22)"/><rect x="90" y="95"  width="14" height="10" fill="rgba(90,158,0,0.45)" class="p2"/>
-          <rect x="90" y="125" width="14" height="10" fill="rgba(90,158,0,0.3)"/><rect x="90" y="155" width="14" height="10" fill="rgba(90,158,0,0.45)" class="p1"/>
-          <rect x="90" y="185" width="14" height="10" fill="rgba(90,158,0,0.22)"/>
-          <line x1="82" y1="18" x2="82" y2="4" class="al"/><circle cx="82" cy="4" r="3" class="dn p1"/>
-          <text x="22" y="48" class="dt">+48F</text>
-        </g>
-
-        <!-- O — CIRCUIT BOARD -->
-        <g clip-path="url(#clipO)">
-          <line x1="162" y1="50" x2="162" y2="220" class="gl"/><line x1="192" y1="50" x2="192" y2="220" class="gl"/>
-          <line x1="222" y1="50" x2="222" y2="220" class="gl"/><line x1="252" y1="50" x2="252" y2="220" class="gl"/><line x1="282" y1="50" x2="282" y2="220" class="gl"/>
-          <line x1="162" y1="80"  x2="292" y2="80"  class="gl"/><line x1="162" y1="110" x2="292" y2="110" class="gl"/>
-          <line x1="162" y1="140" x2="292" y2="140" class="gl"/><line x1="162" y1="170" x2="292" y2="170" class="gl"/><line x1="162" y1="200" x2="292" y2="200" class="gl"/>
-          <path d="M162 80 L192 80 L192 110 L252 110 L252 140 L282 140" class="al" stroke-linecap="round" stroke-linejoin="round"/>
-          <path d="M222 80 L222 170 L162 170" class="al" opacity=".55" stroke-linecap="round" stroke-linejoin="round"/>
-          <path d="M192 140 L192 170 L252 170 L252 200" class="al" opacity=".45" stroke-linecap="round" stroke-linejoin="round"/>
-          <circle cx="192" cy="80"  r="3.5" class="dn p1"/><circle cx="252" cy="110" r="3.5" class="dn p2"/>
-          <circle cx="252" cy="140" r="3.5" class="dn"/><circle cx="222" cy="170" r="3.5" class="dn p3"/>
-          <circle cx="192" cy="140" r="2.5" class="dd"/><circle cx="282" cy="140" r="2.5" class="dd"/>
-          <rect x="207" y="118" width="30" height="24" rx="2" fill="none" stroke="rgba(90,158,0,0.55)" stroke-width="1.2"/>
-          <text x="210" y="134" class="ct">CPU</text>
-        </g>
-
-        <!-- HYPHEN — data flow -->
-        <line x1="318" y1="128" x2="418" y2="128" stroke="rgba(90,158,0,0.45)" stroke-width="1.5" stroke-dasharray="6 3"/>
-        <polygon points="415,124 423,128 415,132" fill="#5a9e00" opacity=".55"/>
-        <polygon points="321,124 313,128 321,132" fill="#5a9e00" opacity=".55"/>
-        <text x="350" y="120" class="ct">data</text><text x="350" y="146" class="ct">flow</text>
-
-        <!-- C2 — CODE TERMINAL -->
-        <g clip-path="url(#clipC2)">
-          <rect x="442" y="38" width="110" height="185" rx="2" fill="rgba(17,17,16,0.03)"/>
-          <text x="452" y="62"  class="ct" font-size="9">$ init --build</text>
-          <text x="452" y="80"  class="ct" font-size="9" opacity=".65">▸ compile src/</text>
-          <text x="452" y="98"  class="ct" font-size="9">const rise = &#123;</text>
-          <text x="460" y="115" class="ct" font-size="9" fill="rgba(17,17,16,0.38)">  build: true,</text>
-          <text x="460" y="131" class="ct" font-size="9" fill="rgba(17,17,16,0.38)">  ship: fast,</text>
-          <text x="460" y="147" class="ct" font-size="9" fill="rgba(17,17,16,0.38)">  impact: ∞</text>
-          <text x="452" y="164" class="ct" font-size="9">&#125;</text>
-          <text x="452" y="182" class="ct" font-size="9">✓ deployed</text>
-          <text x="452" y="200" class="ct" font-size="9">█</text>
-          <rect x="442" y="55" width="110" height="10" fill="rgba(90,158,0,0.07)"/>
-          <rect x="442" y="73" width="110" height="10" fill="rgba(90,158,0,0.05)"/>
-        </g>
-
-        <!-- R — STAIRCASE -->
-        <g clip-path="url(#clipR)">
-          <line x1="600" y1="235" x2="600" y2="38" class="gl"/><line x1="660" y1="235" x2="660" y2="38" class="gl"/><line x1="720" y1="235" x2="720" y2="38" class="gl"/>
-          <polyline points="582,222 582,192 612,192 612,162 642,162 642,132 672,132 672,102 702,102 702,72 732,72 732,42" fill="none" stroke="rgba(17,17,16,0.3)" stroke-width="2" stroke-linejoin="round"/>
-          <line x1="582" y1="192" x2="610" y2="192" class="al"/><line x1="612" y1="162" x2="640" y2="162" class="al"/>
-          <line x1="642" y1="132" x2="670" y2="132" class="al"/><line x1="672" y1="102" x2="700" y2="102" class="al"/>
-          <line x1="702" y1="72"  x2="730" y2="72"  class="al"/>
-          <polygon points="732,33 728,46 736,46" fill="#5a9e00" class="p1"/>
-          <text x="584" y="189" class="dt">L1</text><text x="614" y="159" class="dt">L2</text>
-          <text x="644" y="129" class="dt">L3</text><text x="674" y="99" class="dt">L4</text><text x="704" y="69" class="dt">L5</text>
-        </g>
-
-        <!-- E1 — NEURAL NET -->
-        <g clip-path="url(#clipE1)">
-          <circle cx="748" cy="76"  r="5" class="dn p1"/><circle cx="748" cy="116" r="5" class="dn p2"/>
-          <circle cx="748" cy="156" r="5" class="dn p3"/><circle cx="748" cy="196" r="5" class="dn p1"/>
-          <circle cx="798" cy="92"  r="5" class="dd p2"/><circle cx="798" cy="136" r="5" class="dd p1"/><circle cx="798" cy="180" r="5" class="dd p3"/>
-          <circle cx="842" cy="106" r="5" class="dn p3"/><circle cx="842" cy="156" r="5" class="dn p1"/>
-          <line x1="748" y1="76"  x2="798" y2="92"  class="gl"/><line x1="748" y1="76"  x2="798" y2="136" class="gl"/>
-          <line x1="748" y1="116" x2="798" y2="92"  class="al" opacity=".5"/><line x1="748" y1="116" x2="798" y2="136" class="al" opacity=".7"/>
-          <line x1="748" y1="116" x2="798" y2="180" class="gl"/>
-          <line x1="748" y1="156" x2="798" y2="136" class="al" opacity=".5"/><line x1="748" y1="156" x2="798" y2="180" class="gl"/>
-          <line x1="748" y1="196" x2="798" y2="136" class="gl"/><line x1="748" y1="196" x2="798" y2="180" class="al" opacity=".6"/>
-          <line x1="798" y1="92"  x2="842" y2="106" class="al"/><line x1="798" y1="92"  x2="842" y2="156" class="gl"/>
-          <line x1="798" y1="136" x2="842" y2="106" class="al" opacity=".6"/><line x1="798" y1="136" x2="842" y2="156" class="al" opacity=".8"/>
-          <line x1="798" y1="180" x2="842" y2="156" class="gl"/>
-          <text x="750" y="222" class="ct">AI model</text>
-        </g>
-
-        <!-- A — BLUEPRINT -->
-        <g clip-path="url(#clipA)">
-          <line x1="862" y1="38"  x2="862" y2="235" class="gl"/><line x1="892" y1="38"  x2="892" y2="235" class="gl"/>
-          <line x1="922" y1="38"  x2="922" y2="235" class="gl"/><line x1="952" y1="38"  x2="952" y2="235" class="gl"/><line x1="982" y1="38"  x2="982" y2="235" class="gl"/>
-          <line x1="862" y1="70"  x2="992" y2="70"  class="gl"/><line x1="862" y1="100" x2="992" y2="100" class="gl"/>
-          <line x1="862" y1="130" x2="992" y2="130" class="gl"/><line x1="862" y1="160" x2="992" y2="160" class="gl"/><line x1="862" y1="190" x2="992" y2="190" class="gl"/>
-          <rect x="874" y="78"  width="50" height="40" fill="none" stroke="rgba(17,17,16,0.38)" stroke-width="1.5"/>
-          <rect x="934" y="78"  width="42" height="40" fill="none" stroke="rgba(17,17,16,0.38)" stroke-width="1.5"/>
-          <rect x="874" y="138" width="102" height="46" fill="none" stroke="rgba(90,158,0,0.65)" stroke-width="1.5"/>
-          <text x="880" y="103" class="dt">SRV</text><text x="938" y="103" class="dt">OPS</text>
-          <text x="905" y="166" class="ct">MAIN FLOOR</text>
-          <line x1="899" y1="118" x2="909" y2="118" stroke="#f7f5f0" stroke-width="3"/>
-          <path d="M909 118 Q909 128 899 128" fill="none" stroke="rgba(17,17,16,0.28)" stroke-width="1"/>
-        </g>
-
-        <!-- T — SERVER RACK -->
-        <g clip-path="url(#clipT)">
-          <rect x="1022" y="44"  width="62" height="15" rx="2" fill="none" stroke="rgba(17,17,16,0.32)" stroke-width="1.2"/>
-          <rect x="1022" y="64"  width="62" height="15" rx="2" fill="none" stroke="rgba(17,17,16,0.32)" stroke-width="1.2"/>
-          <rect x="1022" y="84"  width="62" height="15" rx="2" fill="none" stroke="rgba(17,17,16,0.32)" stroke-width="1.2"/>
-          <rect x="1022" y="104" width="62" height="15" rx="2" fill="none" stroke="rgba(17,17,16,0.32)" stroke-width="1.2"/>
-          <rect x="1022" y="124" width="62" height="15" rx="2" fill="none" stroke="rgba(17,17,16,0.32)" stroke-width="1.2"/>
-          <rect x="1022" y="144" width="62" height="15" rx="2" fill="rgba(90,158,0,0.1)" stroke="rgba(90,158,0,0.55)" stroke-width="1.2"/>
-          <rect x="1022" y="164" width="62" height="15" rx="2" fill="none" stroke="rgba(17,17,16,0.32)" stroke-width="1.2"/>
-          <rect x="1022" y="184" width="62" height="15" rx="2" fill="none" stroke="rgba(17,17,16,0.32)" stroke-width="1.2"/>
-          <circle cx="1030" cy="51"  r="2.5" class="dn p1"/><circle cx="1030" cy="71"  r="2.5" class="dn p2"/>
-          <circle cx="1030" cy="91"  r="2.5" class="dd"/><circle cx="1030" cy="111" r="2.5" class="dn p3"/>
-          <circle cx="1030" cy="131" r="2.5" class="dn p1"/><circle cx="1030" cy="151" r="2.5" class="dn p2"/>
-          <circle cx="1030" cy="171" r="2.5" class="dd"/><circle cx="1030" cy="191" r="2.5" class="dn p1"/>
-          <rect x="1040" y="48"  width="30" height="4" rx="1" fill="rgba(90,158,0,0.5)"/>
-          <rect x="1040" y="68"  width="18" height="4" rx="1" fill="rgba(90,158,0,0.35)"/>
-          <rect x="1040" y="88"  width="40" height="4" rx="1" fill="rgba(90,158,0,0.5)"/>
-          <rect x="1040" y="108" width="22" height="4" rx="1" fill="rgba(90,158,0,0.4)"/>
-          <rect x="1040" y="128" width="35" height="4" rx="1" fill="rgba(90,158,0,0.5)"/>
-          <rect x="1040" y="148" width="44" height="4" rx="1" fill="#5a9e00" opacity=".7"/>
-          <rect x="1040" y="168" width="12" height="4" rx="1" fill="rgba(90,158,0,0.3)"/>
-          <rect x="1040" y="188" width="28" height="4" rx="1" fill="rgba(90,158,0,0.45)"/>
-          <text x="1024" y="214" class="ct">PROD</text>
-        </g>
-
-        <!-- E2 — WAVEFORM / SIGNAL -->
-        <g clip-path="url(#clipE2)">
-          <line x1="1110" y1="80" x2="1110" y2="200" stroke="rgba(17,17,16,0.12)" stroke-width="0.6"/>
-          <line x1="1148" y1="80" x2="1148" y2="200" stroke="rgba(17,17,16,0.12)" stroke-width="0.6"/>
-          <line x1="1186" y1="80" x2="1186" y2="200" stroke="rgba(17,17,16,0.12)" stroke-width="0.6"/>
-          <line x1="1108" y1="140" x2="1200" y2="140" stroke="rgba(17,17,16,0.18)" stroke-width="0.8" stroke-dasharray="3 3"/>
-          <polyline points="1108,140 1114,140 1117,78 1120,202 1123,140 1126,140 1129,58 1132,222 1135,140 1138,140 1141,88 1144,192 1147,140 1150,140 1153,98 1156,182 1159,140 1162,140 1165,108 1168,172 1171,140 1174,140 1177,118 1180,162 1183,140 1186,140 1189,128 1192,152 1195,140 1200,140"
-            fill="none" stroke="#5a9e00" stroke-width="1.6" stroke-linejoin="round" class="p1"/>
-          <circle cx="1117" cy="78"  r="3" class="dn p1"/>
-          <circle cx="1132" cy="222" r="3" class="dn p2"/>
-          <circle cx="1141" cy="88"  r="2.5" class="dd"/>
-          <text x="1112" y="232" class="ct">signal</text>
-          <text x="1112" y="54"  class="ct">∿ 48hz</text>
-        </g>
-
-        <!-- LETTER OUTLINES on top -->
-        <text x="10"   y="230" class="lo1">C</text>
-        <text x="148"  y="230" class="lo1">O</text>
-        <text x="308"  y="230" class="lo1">-</text>
-        <text x="430"  y="230" class="lo1">C</text>
-        <text x="572"  y="230" class="lo1">R</text>
-        <text x="720"  y="230" class="lo1">E</text>
-        <text x="856"  y="230" class="lo1">A</text>
-        <text x="992"  y="230" class="lo1">T</text>
-        <text x="1098" y="230" class="lo1">E</text>
-      </svg>
-      <div style="display:flex;align-items:baseline;gap:0.3em;margin-top:8px;">
-        <span style="font-family:'DM Sans',sans-serif;font-size:clamp(48px,7vw,96px);font-weight:300;color:rgba(17,17,16,0.22);letter-spacing:-0.02em;">for</span>
-        <span style="font-family:'Bebas Neue',sans-serif;font-size:clamp(64px,9vw,130px);color:var(--accent);letter-spacing:-0.01em;line-height:1;">Impact.</span>
+      <div style="display: flex; flex-wrap: wrap; align-items: baseline; gap: 0.2em; line-height: 1.2;">
+        <span style="font-family:'Bebas Neue',sans-serif;font-size:clamp(64px,12vw,140px);letter-spacing:-0.01em;">Co-Create</span>
+        <span style="font-family:'DM Sans',sans-serif;font-size:clamp(48px,8vw,100px);font-weight:300;color:rgba(17,17,16,0.22);letter-spacing:-0.02em;">for</span>
+        <span style="font-family:'Bebas Neue',sans-serif;font-size:clamp(64px,12vw,140px);color:var(--accent);letter-spacing:-0.01em;">Impact</span>
+        <span style="font-family:'DM Sans',sans-serif;font-size:clamp(48px,8vw,100px);font-weight:300;color:rgba(17,17,16,0.22);letter-spacing:-0.02em;">.</span>
       </div>
     </div>
     <div class="hero-sub-row">
