--- a/rise-risers.html
+++ b/rise-risers.html
@@ -442,24 +442,24 @@ function avatar(seed, name) {
 
 // ── TEAM DATA ────────────────────────────────────
 const coreTeam = [
-  { num:'01', name:'Oğuz Yumuk', role:'Business Development · Strategic Deal Architect', bio:'Designs scalable growth systems that compound capital flow and structural defensibility.', tags:['strategy','growth'] },
-  { num:'02', name:'Barış Yaşbala', role:'Marketing Systems · Vibecoding Strategist', bio:'Builds distribution engines where brand, product, and velocity converge into momentum.', tags:['growth','strategy'] },
-  { num:'03', name:'Göktürk Özge', role:'Research · Gen-Z Signal Interpreter', bio:'Bridges generational intelligence into product and positioning advantage.', tags:['strategy','growth'] },
-  { num:'04', name:'Stefanie Pinsley', role:'AI Speaker · Former Google PMM', bio:'Translates AI into executive clarity and scales influence through community and thought leadership.', tags:['strategy','growth'] },
-  { num:'05', name:'Ricardo Martines', role:'International Talent Architect · LatAm Connector', bio:'Builds high-quality pipelines across Spanish-speaking ecosystems with precision and speed.', tags:['growth','strategy'] },
-  { num:'06', name:'Hüseyin Bardakci', role:'Code-Master · Systems Architect', bio:'Designs resilient technical infrastructure that ships fast and scales without friction.', tags:['tech'] },
-  { num:'07', name:'Uğur Arslan', role:'Execution Lead · Product Operator', bio:'Turns roadmap into shipped product. Focused on compounding execution, not planning cycles.', tags:['tech','strategy'] },
-  { num:'08', name:'London W.', role:'International Finance · Valuation Strategist', bio:'Ensures capital integrity, structural compliance, and growth readiness for cross-border ventures.', tags:['strategy'] },
-  { num:'09', name:'Colleen Schepegel', role:'Founder Mentor · Business Analyst', bio:'Strengthens founder clarity and operational alignment at every critical inflection point.', tags:['strategy'] },
-  { num:'10', name:'Ada Raylan', role:'Venture Coach · Business Structuring Advisor', bio:'Sharpens business models into fundable, defensible systems that attract capital.', tags:['strategy'] },
-  { num:'11', name:'Sinem Yurttaş', role:'International Relations · Strategic Partnerships', bio:'Expands cross-border leverage and builds institutional access across global ecosystems.', tags:['strategy','growth'] },
-  { num:'12', name:'Sinem Doğan', role:'Business Developer · Network Catalyst', bio:'Activates ecosystems and converts conversations into compounding business momentum.', tags:['growth','strategy'] },
+  { num:'01', name:'Oğuz Yumuk', role:'Business Development · Infrastructure Mind', bio:'Designs scalable growth systems. Thinks in leverage, capital flow, and structural defensibility.', tags:['strategy','growth'] },
+  { num:'02', name:'Barış Yaşbala', role:'Marketing Systems · Narrative Builder', bio:'Builds distribution engines where brand, product, and velocity converge.', tags:['growth','strategy'] },
+  { num:'03', name:'Göktürk Özge', role:'Research · Outreach · Gen-Z Signal', bio:'Bridges generational intelligence into product and positioning advantage.', tags:['strategy','growth'] },
+  { num:'04', name:'Stefanie Pinsley', role:'AI Speaker · Leadership Strategist', bio:'Translates AI into executive clarity. Scales influence through community and thought leadership.', tags:['strategy','growth'] },
+  { num:'05', name:'Ricardo Martines', role:'International Talent Architect · Spanish Market', bio:'Builds high-quality pipelines across Spanish-speaking ecosystems.', tags:['growth','strategy'] },
+  { num:'06', name:'Hüseyin Bardakci', role:'Code-Master · Systems Architect', bio:'Designs resilient technical infrastructure that ships fast and scales.', tags:['tech'] },
+  { num:'07', name:'Uğur Arslan', role:'Execution Lead · Product Operator', bio:'Turns roadmap into shipped product. Focused on compounding execution.', tags:['tech','strategy'] },
+  { num:'08', name:'London W.', role:'Audit · International Finance', bio:'Ensures capital integrity, structural compliance, and growth readiness across borders.', tags:['strategy'] },
+  { num:'09', name:'Colleen Schepegel', role:'Founder Mentor · Business Analyst', bio:'Strengthens founder clarity and operational alignment at every inflection point.', tags:['strategy'] },
+  { num:'10', name:'Ada Raylan', role:'Mentor · Venture Coach', bio:'Sharpens business models into fundable, defensible systems that attract capital.', tags:['strategy'] },
+  { num:'11', name:'Sinem Yurttaş', role:'International Relations · Strategic Partnerships', bio:'Expands cross-border leverage and builds institutional access globally.', tags:['strategy','growth'] },
+  { num:'12', name:'Sinem Doğan', role:'Business Developer · Network Catalyst', bio:'Activates ecosystems and converts conversations into compounding momentum.', tags:['growth','strategy'] },
 ];
 
 const expansionTeam = [
-  { num:'13', name:'Eren Kaya', role:'AI Systems Engineer · Agent Architect', bio:'Designs autonomous workflows and production-grade AI agents that operate at scale.', tags:['tech'] },
-  { num:'14', name:'Melis Karaca', role:'Product Experience Designer · Interface Strategist', bio:'Builds clarity into complexity. UX that drives conversion and reduces decision friction.', tags:['tech','growth'] },
-  { num:'15', name:'Daniel Moore', role:'Growth Analytics · Data Intelligence Lead', bio:'Transforms raw data into decision velocity and capital signals that move the needle.', tags:['growth','strategy'] },
+  { num:'13', name:'Eren Kaya', role:'AI Systems Engineer · Agent Architect', bio:'Designs autonomous workflows and production-grade AI agents at scale.', tags:['tech'] },
+  { num:'14', name:'Melis Karaca', role:'Product Experience Designer · Interface Strategist', bio:'Builds clarity into complexity. UX that drives conversion and removes friction.', tags:['tech','growth'] },
+  { num:'15', name:'Daniel Moore', role:'Growth Analytics · Data Intelligence', bio:'Transforms raw data into decision velocity and capital signals that move the needle.', tags:['growth','strategy'] },
   { num:'16', name:'Javier Ortega', role:'LatAm Market Expansion · Strategic Partnerships', bio:'Builds regional leverage across emerging AI ecosystems in high-growth markets.', tags:['growth','strategy'] },
   { num:'17', name:'Zeynep Akın', role:'Operations Architect · Process Optimizer', bio:'Designs internal systems that compound speed, eliminate waste, and scale precision.', tags:['strategy','tech'] },
   { num:'18', name:'Marcus Lee', role:'Capital Strategy · Investor Relations', bio:'Aligns narrative, traction, and valuation logic for funding events that close.', tags:['strategy'] },
@@ -467,7 +467,7 @@ const expansionTeam = [
   { num:'20', name:'Arda Demir', role:'Full-Stack Developer · Infrastructure Builder', bio:'Ships scalable backend and frontend ecosystems with speed and architectural integrity.', tags:['tech'] },
   { num:'21', name:'Laura Bennett', role:'Brand Strategy · Positioning Architect', bio:'Builds signal clarity in competitive markets where attention is the scarcest resource.', tags:['growth','strategy'] },
   { num:'22', name:'Mehmet Özkan', role:'Cybersecurity · Risk Infrastructure', bio:'Protects systems, data, and capital integrity against structural and operational risk.', tags:['tech','strategy'] },
-  { num:'23', name:'Sofia Alvarez', role:'People Strategy · Talent Scaling', bio:'Designs hiring systems aligned with velocity, culture, and compounding team performance.', tags:['strategy','growth'] },
+  { num:'23', name:'Sofia Alvarez', role:'People Strategy · Talent Scaling', bio:'Designs hiring systems aligned with velocity, culture, and team performance.', tags:['strategy','growth'] },
   { num:'24', name:'Tom Richardson', role:'Strategic Advisor · Market Intelligence', bio:'Maps competitive landscapes into structural advantage that guides decisive action.', tags:['strategy'] },
 ];
 
